Move to new structure

--- a/test/Soenneker.Validators.ExpiringKey.Tests/Soenneker.Validators.ExpiringKey.Tests.csproj
+++ b/test/Soenneker.Validators.ExpiringKey.Tests/Soenneker.Validators.ExpiringKey.Tests.csproj
@@ -31,7 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Validators.ExpiringKey.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Validators.ExpiringKey.csproj" />
     </ItemGroup>
 
 </Project>
